--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "foldHeading": true,
   "showLineNumber": false,
   "rightToLeft": false,
-  "spellcheck": true
+  "spellcheck": true,
+  "showInlineTitle": true
 }
